--- a/Belle.py.save.1
+++ b/Belle.py.save.1
@@ -238,12 +238,25 @@ except KeyboardInterrupt:
 
     ##    ##-----------Framework----------------
     #Outputs to new JSON post each time
-   # jsonString = '[{"dumbbell_id":"58dfca3f1d3448278f2fc68a","workout":"test1","reps":10,"form":20}]'
+    jsonString = '[{"dumbbell_id":"58dfca3f1d3448278f2fc68a","user_id":"Belle","date":' + str(getDate()) + ',"workout":"bicepcurl","reps":' + str(reps) + ',"form":' + str(workoutRating)+ '}]'
+    toApp = '[{"dumbell_id":}]'
     #HTTP Post request on z
-    #head = {'Content-Type': 'application/json'}
-    #r = requests.post('http://46.101.3.244:8080/api/workoutData', data = jsonString, headers=head)
+    head = {'Content-Type': 'application/json'}
+    r = requests.post('http://46.101.3.244:8080/api/workoutData', data = toApp, headers=head)
     #r = requests.post('http://192.168.43.200:8080/api/workoutData', data = json.dumps(jsonString), headers=head)
-    #print r
+    print r
 
+    
+        ##-------------Testing----------------
+##        xAvg = xAvg / counter
+##        yAvg = yAvg / counter
+##        xExp = xExp / counter
+##        print("\nRep count:" + str(reps))
+##        print("X: " + str(xAvg))
+##        print("Y: " + str(yAvg))
+##        print("Xexp: " + str(xExp))
+##        print("Yexp: " + str(yExp))
+##        print("testCount: " + str(testCount))
+        
 
-    os.system('python2.7 Server_test.py "58dfca3f1d3448278fc68a" "theo1" 10 20')
+    
